# gdrive_manager

./: README.md  pyproject.toml
gdrive_manager/: manage.py
