[tool.poetry]
name = "gdrive-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^1.10.0"
google-auth-httplib2 = "^0.0.4"
google-auth-oauthlib = "^0.4.1"
oauth2client = "^4.1.3"
ipdb = "^0.13.3"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
clean-permissions = "gdrive_manager.clean_permissions:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
